added back to top button
Signed-off-by: auralshin <anshulspartan141@gmail.com>

--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=docs/getstarted">
+    <link rel="stylesheet" href="static/css/back-to-top.css">
     <script type="text/javascript">
       window.location.href = 'docs/getstarted';
     </script>
+    <script src ="static/js/back-to-top.js"></script>
     <title>Getting Started with Litmus</title>
   </head>
   <body>
     If you are not redirected automatically, follow this <a href="docs/getstarted">link</a>.
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
   </body>
 </html>
